# openclaw-voice-agent

./: .gitignore  BUG_REPORT_01.md  DEVELOPMENT.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  README.md  TASK_LIST.md  TEST_ARCHITECTURE_REFACTOR_PLAN.md  TEST_COVERAGE_REPORT.md  TEST_REPORT_FINAL.md  TODO.md  auto-monitor-all.sh  auto-monitor.sh  build.sh  conftest.py  debug_tts_stt_loop.py  debug_tts_stt_loop_v2.py  debug_tts_stt_loop_v3.py  gateway-watchdog.sh  integration_test.py  keep-gateway-alive.sh  package-lock.json  package.json  pytest.ini  requirements.txt  sq  start-backend.sh  start-gateway.sh  test-streaming-subtitles.py  test-websocket-messages.py  test-websocket.js  test_stt.py  test_tts.py  test_tts2.py  test_us05.py  test_us05_e2e.py  test_us06.py  test_us06_e2e.py  test_websocket.py  view-logs.sh  (+1 more)
backend/: README.md  benchmark.py  cert.pem  key.pem  pyproject.toml  requirements.txt
backend/tests/: test_config.py  test_webrtc_server.py
backend/voice_gateway/: __init__.py  agent_client.py  audio_processor.py  config.py  main.py  protocol.py  stt_service.py  tts_service.py  webrtc_server.py
backend/voice_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: ALI_DASHSCOPE_INTEGRATION.md  ALI_DASHSCOPE_STREAMING_API.md  ARCHITECTURE.md  BAILIAN_API_REFS.md  BAILIAN_REALTIME_API.md  IMPLEMENTATION_SUMMARY.md  MINIMAX_STREAMING_API.md  PHASE1_STREAMING_SUBTITLES.md  STREAMING_API_COMPARISON.md  USER_STORIES.md  e2e-test-report.md  frontend-analysis.md  performance-optimization-report.md  travel-agency-integration-report.md  (+1 more)
(+109 files in other folders)
